# geom3d

./: .codeclimate.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  build.sh  requirements.txt  setup.cfg  setup.py
docs/: basic.rst  conf.py  index.rst
geom3d/: __init__.py  base.pxd  base.py  base.pyx  basic.pxd  basic.py  basic.pyx  exceptions.py  meshes.pxd  meshes.pyx  paths.py  utils.pxd  utils.pyx
geom3d/degrees/: __init__.py  coordinates.pxd  coordinates.py  coordinates.pyx  planets.pxd  planets.py  planets.pyx
geom3d/meshes/: __init__.py  basic.py  mehes.pyx  meshes.pxd  meshes.pyx
geom3d/paths/: __init__.py  nonintersecting.pxd  nonintersecting.py  nonintersecting.pyx  path.pxd  path.py  path.pyx  polygon.pxd  polygon.pyx
geom3d/polygons/: __init__.py  twodimensional.pxd  twodimensional.py  twodimensional.pyx
tests/: build.sh  test.sh  test_basic.py  test_coordinates.py  test_exceptions.py  test_path.py
tests/test_paths/: test_nonintersecting.py  test_path.py  test_polygon.py
tests/test_polygons/: test_twodimensional.py
