# coding: utf-8
[metadata]
name = geom3d
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Piotr Maślanka
author_email = piotr.maslanka@henrietta.com.pl
description = A library for 3D geometry
url = https://github.com/Cervi-Robotics/geom3d
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100
